@@ -1,5 +1,5 @@
 APACHE PORTABLE RUNTIME (APR) LIBRARY STATUS:			-*-text-*-
-Last modified at [$Date: 2000/12/17 03:08:44 $]
+Last modified at [$Date: 2000/12/17 03:35:39 $]
 
 Release:
 
@@ -17,9 +17,6 @@ RELEASE SHOWSTOPPERS:
     * Source code layout needs to be decided for apr and apr-util.  There
       has been some discussion about adding a src/ directory to apr or 
       removing it from apr-util/.  Either way, this needs to be decided.
-
-    * Rename Symbols:
-		apr_opendir   -->    apr_dir_open
 
 RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
 
